--- a/_checkout.html
+++ b/_checkout.html
@@ -6,19 +6,32 @@
             <div class=row>
                 <h4>If driver cannot locate your specific item, buy... </h4>
                 <div class="list-group vertical-center" id="checkout_notes" data-toggle="buttons">
+                    <div class ="row">
+                        <form role="form">
+                            <label class="radio-inline">
+                                <input type="radio" name="optradio">Option 1
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="optradio">Option 2
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="optradio">Option 3
+                            </label>
+                        </form>
+                    </div>
                     <div class="row">
-                        <label class="btn list-group-item active">
+                        <label class="btn col-xs-6-offset-3 list-group-item active">
                             <input type="radio" name="specialnotes" id="checkout_option1" value="cheapest"
                                    autocomplete="off" checked>Cheapest option
                         </label>
                     </div>
                     <div class="row">
-                        <label class="btn list-group-item">
+                        <label class="btn col-xs-6-offset-3 list-group-item">
                             <input type="radio" name="specialnotes" id="checkout_option2" value="expensive"
                                    autocomplete="off">Most expensive option
-                        </label><s></s>
+                        </label>
                     </div>
-                    <div class="div">
+                    <div class="row">
                         <label class="btn list-group-item">
                             <input type="radio" name="specialnotes" id="checkout_option3" value="none"
                                    autocomplete="off">Nothing
@@ -26,65 +39,65 @@
                     </div>
                 </div>
 
-                <h4>Available times for drop-off.</h4>
-                <div class="row">
-                    <div class="col-xs-12 nohighlight" id="appendCalendar">
-                    </div>
-                </div>
-                <div class="form-group col-xs-5">
-                    <select class="form-control" id="checkout_time1">
-                        <option>9AM</option>
-                        <option>10AM</option>
-                        <option>11AM</option>
-                        <option>12PM</option>
-                        <option>1PM</option>
-                        <option>2PM</option>
-                        <option>3PM</option>
-                        <option>4PM</option>
-                        <option>5PM</option>
-                        <option>6PM</option>
-                        <option>7PM</option>
-                        <option>8PM</option>
-                        <option>9PM</option>
-                        <option>10PM</option>
-                        <option>11PM</option>
-                        <option>12PM</option>
-                        <option>1AM</option>
-                    </select>
-                </div>
-                <div class="col-xs-2">
-                    <p>to</p>
-                </div>
-                <div class="form-group col-xs-5">
-                    <select class="form-control" id="checkout_time2">
-                        <option>9AM</option>
-                        <option>10AM</option>
-                        <option>11AM</option>
-                        <option>12PM</option>
-                        <option>1PM</option>
-                        <option>2PM</option>
-                        <option>3PM</option>
-                        <option>4PM</option>
-                        <option>5PM</option>
-                        <option>6PM</option>
-                        <option>7PM</option>
-                        <option>8PM</option>
-                        <option>9PM</option>
-                        <option>10PM</option>
-                        <option>11PM</option>
-                        <option>12PM</option>
-                        <option>1AM</option>
-                    </select>
-                </div>
+                <!--<h4>Available times for drop-off.</h4>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-xs-12 nohighlight" id="appendCalendar">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="form-group col-xs-5">-->
+                    <!--<select class="form-control" id="checkout_time1">-->
+                        <!--<option>9AM</option>-->
+                        <!--<option>10AM</option>-->
+                        <!--<option>11AM</option>-->
+                        <!--<option>12PM</option>-->
+                        <!--<option>1PM</option>-->
+                        <!--<option>2PM</option>-->
+                        <!--<option>3PM</option>-->
+                        <!--<option>4PM</option>-->
+                        <!--<option>5PM</option>-->
+                        <!--<option>6PM</option>-->
+                        <!--<option>7PM</option>-->
+                        <!--<option>8PM</option>-->
+                        <!--<option>9PM</option>-->
+                        <!--<option>10PM</option>-->
+                        <!--<option>11PM</option>-->
+                        <!--<option>12PM</option>-->
+                        <!--<option>1AM</option>-->
+                    <!--</select>-->
+                <!--</div>-->
+                <!--<div class="col-xs-2">-->
+                    <!--<p>to</p>-->
+                <!--</div>-->
+                <!--<div class="form-group col-xs-5">-->
+                    <!--<select class="form-control" id="checkout_time2">-->
+                        <!--<option>9AM</option>-->
+                        <!--<option>10AM</option>-->
+                        <!--<option>11AM</option>-->
+                        <!--<option>12PM</option>-->
+                        <!--<option>1PM</option>-->
+                        <!--<option>2PM</option>-->
+                        <!--<option>3PM</option>-->
+                        <!--<option>4PM</option>-->
+                        <!--<option>5PM</option>-->
+                        <!--<option>6PM</option>-->
+                        <!--<option>7PM</option>-->
+                        <!--<option>8PM</option>-->
+                        <!--<option>9PM</option>-->
+                        <!--<option>10PM</option>-->
+                        <!--<option>11PM</option>-->
+                        <!--<option>12PM</option>-->
+                        <!--<option>1AM</option>-->
+                    <!--</select>-->
+                <!--</div>-->
             </div>
         </div>
-
-        <div class="row" style="text-align: center">
-            <a type="button" id="checkout_submitcheckout" class="btn waves-effects orange">Continue</a>
-            <a type="button" id="checkout_close" class="btn waves-effects orange">Close</a>
-        </div>
-
     </div>
+
+    <div class="row" style="text-align: center">
+        <a type="button" id="checkout_submitcheckout" class="btn waves-effects orange">Continue</a>
+        <a type="button" id="checkout_close" class="btn waves-effects orange">Close</a>
+    </div>
+
 </div>
 <div class="footerBars container">
     <div class="footer2"></div>
