Added Cancel to receipt page

--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -32,6 +32,8 @@
         </div>
         <div class="col-xs-12">
             <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
+            <a class="btn waves-effects orange disabled" id="cancelRecButton1">Cancel</a>
+
         </div>
         <!--</div>-->
     </div>
