--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,8 +1,8 @@
 <div id="_cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
+            <img
             <h2 id="listName_cancelTicket"></h2>
-            <h3 id="phone_cancelTicket"></h3>
         </div>
     </div>
     <div class="row">
@@ -14,9 +14,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="input-field">
-                <label for="cancelTicket_note">Special Note:</label>
-                <input disabled type="text" class="form-control bfh-phone" data-country="US"
-                       id="cancelTicket_note">
+                <div id="cancelTicket_note"></div>
             </div>
         </div>
     </div>
@@ -25,10 +23,10 @@
         <div class="col-xs-12">
             <div class="row" id="_cancelTicket_footerInfo">
                 <div class="col-xs-4" id="_cancelTicket_numItems"></div>
-                <a id="cancelTicket_list_btn" type="button" class="btn waves-effect orange">
+                <a id="cancelTicket_list_btn" type="button" class="btn waves-effect">
                     Close
                 </a>
-                <a id="cancelTicket_cancel_btn" type="button" class="btn waves-effect orange">
+                <a id="cancelTicket_cancel_btn" type="button" class="btn waves-effect">
                     Cancel ticket
                 </a>
 
