--- a/_checkout.html
+++ b/_checkout.html
@@ -6,18 +6,18 @@
             <div class=row>
                 <h4>If driver cannot locate your specific item, buy... </h4>
                 <div class="row">
-                    <form action="submit" style="text-align:left">
+                    <form action="submit" style="text-align:left" id="#checkout_notes">
                         <div class="col-xs-4 col-xs-offset-4">
                         </p>
-                            <input name="special_notes" type="radio" id="checkout_option1"/>
+                            <input name="special_notes" type="radio" id="checkout_option1" value="cheapest"/>
                             <label for="checkout_option1">Cheapest</label>
                         </p>
 
-                        <input name="special_notes" type="radio" id="checkout_option2"/>
+                        <input name="special_notes" type="radio" id="checkout_option2" value="expensive"/>
                             <label for="checkout_option2">Most Expensive</label>
                         </p>
 
-                        <input name="special_notes" type="radio" id="checkout_option3"/>
+                        <input name="special_notes" type="radio" id="checkout_option3" value="none"/>
                             <label for="checkout_option3">None</label>
                         </div>
                     </form>
