--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 </div>
 <div id="User">
-    <div class="container">
+    <div class="jumbotron text-center">
         <div class="row">
-            <div id="Glyph" class="col-xs-3">
-                <div id="index_login_top"><a style="text-decoration:none" onclick="goToPage('_login')"><h3>Login</h3></a> </div>
+            <div id="Glyph" class="col-xs-1 col-xs-offset-1">
+                <div id="index_login_top"><a style="text-decoration:none"onclick="goToPage('_login')"><h4>LOGIN</h4></a> </div>
                 <div id="open-menu-drawer"><span class="glyphicon glyphicon-menu-hamburger"></span></div>
             </div>
-            <div id="Fetch" class=" text-center col-xs-6">
+            <div id="Fetch" class=" text-center col-xs-8">
                 <div id="title">Fetch</div>
             </div>
             <div class="col-xs-3"></div>
