Fixed Cancel and added title

--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -12,7 +12,7 @@
                 Upload Receipt Image<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
             </label>
             <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
-            <a class="btn waves-effects orange disabled" id="cancelRecButton1">Cancel</a>
+            <a class="btn waves-effects orange" id="cancelRecButton1">Cancel</a>
 
             <div id="driverMap1" class="map"></div>
 
