--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,7 +1,7 @@
 <div id="_cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
-            <img
+            <img class="img-circle" id="shoppingStatus-img" src="placeholder/person5.png">
             <h2 id="listName_cancelTicket"></h2>
         </div>
     </div>
