--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,7 +1,7 @@
 <div id="_shoppingStatus" class="container box text-center">
     <div class="row">
     <div class="col-xs-12">
-            <img style="margin: 8%" class="img-circle" id="shoppingStatus-img" src="placeholder/person5.png">
+            <img class="img-circle" id="shoppingStatus-img" src="placeholder/person5.png">
             <h2 id="listName_shoppingStatus"></h2>
     </div>
         <div class="col-xs-12">
@@ -11,7 +11,7 @@
         <div class="col-xs-12">
                 <div class="text-left" id="shoppingstatus_note"></div>
                 <div class="text-left" id="shoppingstatus_location"></div>
-
+                <div id="shoppingStatusMap" class="map"></div>
         </div>
 
         <div id="shoppingStatusCalendarPart" class="col-xs-12">
@@ -26,7 +26,6 @@
                     Close
                 </a>
             </div>
-            <div id="shoppingStatusMap" class="map"></div>
         </div>
 
 
