fix login go back to homepage in default

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                         goToPage("_history");
                         break;
                     default:
-                        goToPage(data.currentPage);
+                        goToPage("_homePage");//data.currentPage);
                 }
 
             }
