--- a/_driverList.html
+++ b/_driverList.html
@@ -7,7 +7,7 @@
 <!--</div>-->
 
 
-<div class="box text-center">
+<div class="container box text-center">
     <div class="row" id="driverListHeader">
         <div class="col-xs-12">
                 <h2 id="listName_driverList"></h2>
