--- a/_login.html
+++ b/_login.html
@@ -11,10 +11,9 @@
                 <input type="password" class="form-control" id="login_user_pass" name="password"/><br>
                 <label for="login_user_pass">Password</label>
             </div>
-            <div class="checkbox">
-                <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me<br>
-            </div>
-            <button class="btn waves-effect orange" id="login_butt" type="submit">Login</button>
+            <button class="btn waves-effect orange" id="login_butt" type="submit">Login</button><br><br>
+            <a  onclick="goToPage('_signUp')"><h6 id="signup-link">Create account</h6></a>
+
         </div>
     </div>
 </div>
