--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,28 +1,29 @@
 <div id="_cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
-            <img class="img-circle" id="shoppingStatus-img" src="placeholder/person5.png">
+            <img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">
             <h2 id="listName_cancelTicket"></h2>
         </div>
-    </div>
-    <div class="row">
+
+
         <div class="col-xs-12">
             <ul id="_cancelTicket_list"></ul>
+            <div class="text-left"  id="_cancelTicket_numItems"></div>
         </div>
-    </div>
 
-    <div class="row">
         <div class="col-xs-12">
-            <div class="input-field">
-                <div id="cancelTicket_note"></div>
-            </div>
+            <div class="text-left" id="cancelTicket_note"></div>
+            <div class="text-left" id="cancelTicket_location"></div>
+            <div id="cancelTicketMap" class="map"></div>
         </div>
-    </div>
 
-    <div class="row">
+        <div id="cancelTicketCalendarPart" class="col-xs-12">
+            <div class="text-left" id="cancelTicketCalendarHeader">Delivery time:</div>
+            <div id="cancelTicketCalendar"></div>
+        </div>
+
         <div class="col-xs-12">
             <div class="row" id="_cancelTicket_footerInfo">
-                <div class="col-xs-4" id="_cancelTicket_numItems"></div>
                 <a id="cancelTicket_list_btn" type="button" class="btn waves-effect">
                     Close
                 </a>
@@ -32,7 +33,6 @@
 
             </div>
         </div>
-    </div>
 </div>
 <div class="footerBars container">
     <div class="footer2"></div>
