--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
                 <div class="div2" id="index_user-name"></div>
                 <div>
                     <span id="toggling">Shopper</span>
-                    <span id="toggleButton" onclick="toggles();" class="toggle-button">
+                    <span style="top:10px" id="toggleButton" class="switch">
+                        <label>
+                            <input type="checkbox"onclick="toggles();">
+                            <span class="lever" style="top:15px"></span>
+                        </label>
+                    </span>
+                    <!--<span id="toggleButton" onclick="toggles();" class="toggle-button">-->
                         <button></button>
                     </span>
                 </div>
