--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             }
         },
         login: function (data) { //Called after successful login, passing the returned data
-
+            index_login();
             console.log("login");
             console.log(data);
             var d = new Date();
@@ -452,11 +452,12 @@
                 loader.isDriver = false;
                 loader.ticketId = "";
                 //goToPage("_homePage");
-                if(loader.previousPage != "_login" || loader.previousPage != "_signUp"){
+
+                if(loader.previousPage == "_checkout"){
                     goToPage(loader.previousPage);
                 }
                 else{
-                    goToPage("_homePage");
+                    goToPage('_homePage');
                 }
             }
             else {
