--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,8 +1,9 @@
 <div id="_cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
-            <img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">
-            <h2 id="listName_cancelTicket"></h2>
+            <!--<img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">-->
+            <!--<h2 id="listName_cancelTicket"></h2>-->
+            <h2>Ticket's details</h2>
         </div>
 
 
