checkout disable on invalid and load null

--- a/_checkout.html
+++ b/_checkout.html
@@ -25,6 +25,11 @@
                         </form>
                     </div>
                 </div>
+                <div class ="row">
+                    <div class="alert alert-danger fade in" id="checkout_warning">
+                        <strong>Danger!</strong> There are some empty fields!
+                    </div>
+                </div>
             </div>
         </div>
     </div>
