--- a/_shopping.html
+++ b/_shopping.html
@@ -21,7 +21,7 @@
             <div class="row" id="footerInfo">
                 <div class="col-xs-4" id="shopping_numItems"></div>
                 <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn waves-effects">
-                    Submit
+                    Continue
                 </a>
             </div>
         </div>
