changed ticket page

--- a/_tickets.html
+++ b/_tickets.html
@@ -12,25 +12,29 @@
 
         <div class="col-xs-6 col-md-3">
             <div class="store" data-name="ralphs">
-                <h4>RALPHS</h4>
+                <input type="checkbox" id="ralphs" />
+                <label for="ralphs"> RALPHS</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
             <div class="store" data-name="tjs">
-                <h4>TJ's</h4>
+                <input type="checkbox" id="tjs" />
+                <label for="tjs"> TJ's</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
             <div class="store" data-name="wholeFoods">
-                <h4>WHOLEFOODS</h4>
+                <input type="checkbox" id="wholeFoods" />
+                <label for="wholeFoods"> W F</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
             <div class="store" data-name="vons">
-                <h4>VONS</h4>
+                <input type="checkbox" id="vons" />
+                <label for="vons"> VONS</label>
             </div>
         </div>
 
