--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,6 +1,4 @@
-
-
-<div class="container box" id="passwordRecovery">
+<div class="container text-center box" id="passwordRecovery">
     <div class="row ">
         <div class="col-xs-10 col-xs-12">
             <div>
