--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -1,8 +1,11 @@
 <div class="container box text-center">
     <div class="row" id="purchasedTicketsListHeader">
+        <div class ="col-xs-offset-4 col-xs-4">
+            <img class="img-circle" id="purchasedTickets-img" src="placeholder/person5.png">
+        </div>
         <div class="col-xs-12">
             <h2 id="listName_purchasedTickets"></h2>
-            <h3 id="phone"></h3>
+            <h3 id="phone_purchasedTickets"></h3>
         </div>
     </div>
     <div class="row">
@@ -18,6 +21,20 @@
                 <input disabled type="text" class="form-control bfh-phone" data-country="US"
                        id="purchasedTickets_note">
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div id="purchasedTicketsCalendarPart" class="col-xs-12">
+            <div class="text-left" id="purchasedTicketsCalendarHeader">Delivery time:</div>
+            <div id="purchasedTicketsCalendar"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="text-left" id="purchasedTickets_location"></div>
+            <div id="purchasedTicketsMap" class="map"></div>
         </div>
     </div>
 
