--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,6 +1,6 @@
 <div class="container text-center box" id="passwordRecovery">
     <div class="row ">
-        <div class="col-xs-10 col-xs-12">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
             <div>
                 <h2>Recover Password</h2>
             </div>
