purchase ticket buttons redirect

--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -41,10 +41,10 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="row" id="purchasedTickets_footerInfo">
-                <div class="col-xs-4" id="purchasedTickets_numItems"></div>
-                <a id="purchasedTickets_submit_list" type="button" class="col-xs-4 waves-teal btn waves-effects">
-                    Close Ticket
-                </a>
+                <div class="col-xs-12">
+                    <a id="purchasedTickets-back" type="button" class="btn waves-effects orange"><- Back</a>
+                    <a id="purchasedTickets_submit_list" type="button" class="btn waves-effects orange">Close Ticket -></a>
+                </div>
             </div>
         </div>
     </div>
