--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,6 +1,6 @@
 <div id="_shoppingStatus" class="container box text-center">
     <div class="row">
-        <div class="col-xs-12">
+        <div class ="col-xs-offset-4 col-xs-4">
             <img class="img-circle" id="shoppingStatus-img" src="placeholder/person5.png">
             <h2 id="listName_shoppingStatus"></h2>
         </div>
