--- a/_checkout.html
+++ b/_checkout.html
@@ -36,9 +36,9 @@
 
     <div class="row" style="text-align: center">
         <div class="col-xs-12">
-            <a id="checkout-back" type="button" class="btn waves-effects orange"><- Back</a>
-            <a id="checkout_close" type="button" class="btn waves-effects orange">Close</a>
-            <a id="checkout_submitcheckout" type="button" class="btn waves-effects orange">Continue -></a>
+            <a id="checkout-back" type="button" style="width:150px;" class="btn waves-effects orange"><< Back</a>
+            <a id="checkout_close" type="button" style="width:150px;" class="btn waves-effects orange">Close</a>
+            <a id="checkout_submitcheckout" type="button" style="width:150px;" class="btn waves-effects orange">Continue >></a>
         </div>
     </div>
 
