--- a/_tickets.html
+++ b/_tickets.html
@@ -11,29 +11,29 @@
     <div class="row marketButtons">
 
         <div class="col-xs-6 col-md-3">
-            <div class="store" data-name="ralphs">
-                <input type="checkbox" id="ralphs" />
+            <div class="store-ticket" >
+                <input class="ticket-check" type="checkbox" data-name="ralphs" id="ralphs" />
                 <label for="ralphs"> RALPHS</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
-            <div class="store" data-name="tjs">
-                <input type="checkbox" id="tjs" />
+            <div class="store-ticket" >
+                <input class="ticket-check" type="checkbox"  data-name="tjs"id="tjs" />
                 <label for="tjs"> TJ's</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
-            <div class="store" data-name="wholeFoods">
-                <input type="checkbox" id="wholeFoods" />
+            <div class="store-ticket" >
+                <input class="ticket-check" type="checkbox"  data-name="wholeFoods"id="wholeFoods" />
                 <label for="wholeFoods"> W F</label>
             </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
-            <div class="store" data-name="vons">
-                <input type="checkbox" id="vons" />
+            <div class="store-ticket">
+                <input class="ticket-check" type="checkbox"  data-name="vons" id="vons" />
                 <label for="vons"> VONS</label>
             </div>
         </div>
