REMOVED UL.EMPTY

--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,4 +1,4 @@
-<div id="_cancelTicket" class="container box text-center">
+<div id="cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
             <!--<img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">-->
