updates on panel

--- a/_login.html
+++ b/_login.html
@@ -12,8 +12,8 @@
                 <label for="login_user_pass">Password</label>
             </div>
             <button class="btn waves-effect orange" id="login_butt" type="submit">Login</button><br><br>
-            <a  onclick="goToPage('_signUp')"><h6 id="signup-link">Create account</h6></a><br>
-            <a  onclick="goToPage('_passwordRecovery')"><h6 id="passwordRecover-link">Forgot Password?</h6></a>
+            <a class="col-lg-6" onclick="goToPage('_signUp')"><h6 id="signup-link">Create account</h6></a>
+            <a  class="col-lg-6" onclick="goToPage('_passwordRecovery')"><h6 id="passwordRecover-link">Forgot Password?</h6></a>
 
 
 
