--- a/_purchasedTickets.html
+++ b/_purchasedTickets.html
@@ -1,4 +1,4 @@
-<div class="container box text-center">
+<div class="container box text-center" id="purchasedTickets">
     <div class="row" id="purchasedTicketsListHeader">
         <div class ="col-xs-offset-4 col-xs-4">
             <img class="img-circle" id="purchasedTickets-img" src="placeholder/person5.png">
