--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="jumbotron text-center">
         <div class="row">
             <div id="Glyph" class="col-xs-1 col-xs-offset-1">
-                <div id="index_login_top"><a style="text-decoration:none"onclick="goToPage('_login')"><h4>LOGIN</h4></a> </div>
-                <div id="open-menu-drawer"><span class="glyphicon glyphicon-menu-hamburger"></span></div>
+                <div id="index_login_top" style="display:none"><a style="text-decoration:none"onclick="goToPage('_login')"><h4>LOGIN</h4></a> </div>
+                <div id="open-menu-drawer" style="display:none"><span class="glyphicon glyphicon-menu-hamburger"></span></div>
             </div>
             <div id="Fetch" class=" text-center col-xs-8">
                 <div id="title">Fetch</div>
@@ -685,7 +685,8 @@
                 $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
             }
         }
-
+        $("#index_login_top").show();
+        $("#open-menu-drawer").show();
         loadPage("payment", 0, 0);
     });
 
