--- a/_login.html
+++ b/_login.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
             <h2 class="form-signin-heading">Fetch Login</h2><br>
-            <div id="message"></div>
+            <div id="login_message"></div>
             <div class="input-field">
                 <input type="email" class="form-control" id="login_user_email" name="email"/><br>
                 <label for="login_user_email">Email</label>
