--- a/_signUp.html
+++ b/_signUp.html
@@ -1,9 +1,9 @@
 <div class="container text-center box" id="signUp-container">
     <div class="row">
-
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
             <h2 class="form-signin-heading">Fetch Sign-Up</h2><br>
 
+            <div id="signup_message"></div>
             <div class="input-field">
                 <input type="email" class="form-control" name="email" id="signup_user_email"/>
                 <label for="signup_user_email">Your Email</label>
