Drivelist button css

--- a/_driverList.html
+++ b/_driverList.html
@@ -10,32 +10,25 @@
 <div class="container box text-center">
     <div class="row" id="driverListHeader">
         <div class="col-xs-12">
-                <h2 id="listName_driverList"></h2>
-                <h3 id="phone"></h3>
+            <h2 id="listName_driverList"></h2>
+            <h3 id="phone"></h3>
         </div>
-    </div>
-    <div class="row">
+
         <div class="col-xs-12">
             <ul id="_driverList2_list"></ul>
         </div>
-    </div>
 
-    <div class="row">
         <div class="col-xs-12">
             <div class="input-field">
-                <div class = "text-left" id="_driver_numItems"></div>
-                <div class = "text-left" id="driver_note"></div>
+                <div class="text-left" id="_driver_numItems"></div>
+                <div class="text-left" id="driver_note"></div>
             </div>
         </div>
-    </div>
 
-    <div class="row">
         <div class="col-xs-12">
-            <div class="row" id="_driver_footerInfo">
-                <a id="_driver_submit_list" type="button" class="col-xs-4 waves-teal btn waves-effects">
-                    Submit
-                </a>
-            </div>
+            <a id="_driver_submit_list" type="button" class="waves-teal btn waves-effects">
+                Submit
+            </a>
         </div>
     </div>
 </div>
