--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -8,11 +8,12 @@
                 <input type="text" class="form-control" name="username" id="enter_price_receipt"/><br>
                 <label for="enter_price_receipt">Enter the price:</label>
             </div>
-            <label class="btn waves-effect orange">
-                Upload Receipt Image<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
-                <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
-            </label>
 
+            <a class="btn waves-effect orange">
+                Upload Receipt Image<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
+            </a>
+
+            <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
             <a class="btn waves-effects orange" id="cancelRecButton1">Cancel</a>
 
             <div id="driverMap1" class="map"></div>
