--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,4 +1,4 @@
-<div id="cancelTicket" class="container box text-center">
+<div id="_cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
             <!--<img class="img-circle" id="cancelTicket-img" src="placeholder/person5.png">-->
@@ -34,7 +34,7 @@
 
             </div>
         </div>
-</div>
+</div>z
 <div class="footerBars container">
     <div class="footer2"></div>
     <div class="footer3"></div>
