--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
     <div class="jumbotron text-center">
         <div class="row">
             <div id="Glyph" class="col-xs-1 col-xs-offset-1">
-                <div id="index_login_top" style="display:none"><a style="text-decoration:none"onclick="goToPage('_login')"><h4>LOGIN</h4></a> </div>
-                <div id="open-menu-drawer" style="display:none"><span class="glyphicon glyphicon-menu-hamburger"></span></div>
+                <div id="index_login_top" style="display:none"><a style="text-decoration:none"
+                                                                  onclick="goToPage('_login')"><h4>LOGIN</h4></a></div>
+                <div id="open-menu-drawer" style="display:none"><span class="glyphicon glyphicon-menu-hamburger"></span>
+                </div>
             </div>
             <div id="Fetch" class=" text-center col-xs-8">
                 <div id="title">Fetch</div>
@@ -63,12 +65,12 @@
                     <span id="toggling">Shopper</span>
                     <span style="top:10px" id="toggleButton" class="switch">
                         <label>
-                            <input type="checkbox"onclick="toggles();">
+                            <input type="checkbox" onclick="toggles();">
                             <span class="lever" style="top:15px"></span>
                         </label>
                     </span>
                     <!--<span id="toggleButton" onclick="toggles();" class="toggle-button">-->
-                        <button></button>
+                    <button></button>
                     </span>
                 </div>
             </div>
@@ -186,6 +188,9 @@
             }
             loader.notificationSound.play();
         },
+        uploadChatImage: function (e, parent) {
+            alert();
+        },
         openChat: function (id, name) {
             if (!loader.chat.hasOwnProperty(id)) {
                 loader.chat[id] = {
@@ -203,13 +208,16 @@
                 e.className = "chat";
                 var min = 'onclick="loader.minimizeChat(this.parentNode.parentNode);"';
                 var onClick = "loader.closeChat(this.parentNode.parentNode);";
+                var photo = 'onchange="loader.uploadChatImage(e, this.parentNode.parentNode);"';
                 e.innerHTML = '<div class="chat-head"  data-closed="false" >' +
                         '<div class="chat-profile" ' + min + '>' + '<span class="glyphicon medium glyphicon-user"></span>' + '</div>' +
                         '<div class="chat-name" ' + min + '>' + name + '</div>' +
                         '<div class="chat-close" onclick="' + onClick + '"><span class="glyphicon medium glyphicon-remove"></span></div></div>' +
                         '<div class="window" id="chatWindow' + id + '"></div>' +
                         '<div class="input">' +
-                        '<div class="photo"><span class="glyphicon medium glyphicon-picture"></span></div>' +
+                        '<div class="photo"> ' +
+                        '<input class="hidden" type="file"' + photo+ '  class="uploadChat" name="imageLoader"/> ' +
+                        '<span class="glyphicon medium glyphicon-picture"></span></div>' +
                         '<form class="chatForm" id="chatForm' + id + '"  data-userid="' + id + '">' +
                         '<input autocomplete="off" name="message" type="text" id="enter_price" placeholder="Enter a message...">' +
                         '</form></div>';
@@ -453,10 +461,10 @@
                 loader.ticketId = "";
                 //goToPage("_homePage");
 
-                if(loader.previousPage == "_checkout"){
+                if (loader.previousPage == "_checkout") {
                     goToPage(loader.previousPage);
                 }
-                else{
+                else {
                     goToPage('_homePage');
                 }
             }
@@ -545,7 +553,7 @@
         };
         var map = new google.maps.Map(loader.map, mapOptions);
 //        directionsDisplay.setMap(map);
-        geocoder.geocode({'location': latLng}, function(results, status) {
+        geocoder.geocode({'location': latLng}, function (results, status) {
             if (status === google.maps.GeocoderStatus.OK) {
                 if (results[1]) {
                     map.setZoom(17);
