--- a/_homePage.html
+++ b/_homePage.html
@@ -1,13 +1,13 @@
 <section class="container text-center" id="homePage">
 
     <div class="row marketRow">
-        <figure class="col-xs-6" data-store="vons" id="Vons">
+        <figure class="col-xs-6" data-store="vons" >
             <div class="shop">
                 <!--<img src="/resources/images/food1.jpg"/>-->
                 <h2 class="name"> Vons </h2></div>
         </figure>
 
-        <figure class="col-xs-6"  data-store="ralphs" id="Ralph">
+        <figure class="col-xs-6"  data-store="ralphs" >
             <div class="shop">
                 <!--<img src="/resources/images/food3.jpg"/>-->
                 <h2 class="name"> Ralph's</h2></div>
@@ -19,13 +19,13 @@
 
 
     <div class="row marketRow ">
-        <figure class="col-xs-6" data-store="tjs" id="Joe">
+        <figure class="col-xs-6" data-store="tjs">
             <div class="shop">
                 <!--<img src="/resources/images/food2.jpg"/>-->
                 <h2 class="name"> Trader Joe's </h2></div>
         </figure>
 
-        <figure class="col-xs-6" data-store="wholeFoods" id="WF">
+        <figure class="col-xs-6" data-store="wholeFoods">
             <div class="shop">
                 <!--<img src="/resources/images/food4.jpg"/>-->
                 <h2 class="name"> Whole Foods</h2></div>
