--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -1,5 +1,4 @@
-<div class="container box text-center" id="_viewTicket">
-
+<div class="container box text-center" id="viewTicket">
     <div class="row">
         <div class="col-xs-12">
             <h2 id="listName"></h2>
