--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,4 +1,4 @@
-<div id="_shoppingStatus" class="container box text-center">
+<div id="shoppingStatus" class="container box text-center">
     <div class="row">
         <div class ="col-xs-offset-4 col-xs-4">
             <img class="img-circle" id="shoppingStatus-img" src="placeholder/person5.png">
