Revert to dev mode

--- a/index.html
+++ b/index.html
@@ -723,25 +723,25 @@
         $(document).on('click mousemove focus keypress', loader.setActive);
 
         pageInit();
-//        for (var j = 0; j < allPages.length; j++) {
-//            $('#page-content').append('<div id="section-' + j + '"></div>');
-//            for (var i = 0; i < allPages[j].length; i++) {
-//                var whichid = allPages[j][i];
-//                loadPage(whichid, j, i);
-//                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-//                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
-//            }
-//        }
-
-        $.ajax({
-            type: "POST",
-            url: "/loadPage",
-            data: {name: "allPages"},
-            async: false,
-            success: function (data) {
-                $('#page-content').append(data);
+        for (var j = 0; j < allPages.length; j++) {
+            $('#page-content').append('<div id="section-' + j + '"></div>');
+            for (var i = 0; i < allPages[j].length; i++) {
+                var whichid = allPages[j][i];
+                loadPage(whichid, j, i);
+                var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
+                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
             }
-        });
+        }
+
+//        $.ajax({
+//            type: "POST",
+//            url: "/loadPage",
+//            data: {name: "allPages"},
+//            async: false,
+//            success: function (data) {
+//                $('#page-content').append(data);
+//            }
+//        });
 
         $("#index_login_top").show();
         $("#open-menu-drawer").show();
