--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -1,13 +1,16 @@
-<div class="container box">
+<div class="container box" id="confirmTicket">
     <div class="row text-center">
         <div class="col-xs-12">
             <h2> Confirm your ticket</h2>
 
             <div class="row">
                 <div class="col-xs-12">
-                    <div id="driver_icon" class="col-xs-4"></div>
-                    <div id="driver_name" class="col-xs-8">
-                        <h4 id="driverName"></h4>
+                    <div class ="col-xs-offset-4 col-xs-4">
+                        <img class="img-circle" id="confirmTicket_img" src="placeholder/person5.png">
+                    </div>
+                    <div id="confirmTicket_icon" class="col-xs-4"></div>
+                    <div id="confirmTicket_name" class="col-xs-8">
+                        <h4 id="confirmTicket_driverName"></h4>
                     </div>
                 </div>
             </div>
@@ -15,27 +18,42 @@
             <div class="container box">
                 <div class="row">
                     <div class="col-xs-12">
-                        <ul id="_confirm_list"></ul>
+                        <ul id="confirmTicket_list"></ul>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-xs-12">
                         <div id="_confirm_footerInfo">
-                            <div id="_confirm_numItems"></div>
-                            <div id="_confirm_price"></div>
-                            <div id="_confirm_total_price"></div>
+                            <div id="confirmTicket_numItems" class="text-left"></div>
+                            <div id="confirmTicket_price" class="text-left"></div>
+                            <div id="confirmTicket_total_price" class="text-left"></div>
                         </div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-xs-12">
-                        <div id="receipt"></div>
+                        <div id="confirmTicket_receipt"></div>
                     </div>
                 </div>
             </div>
-            <a type="button" class="btn waves-effects orange" id="confirm_button">Confirm</a>
+
+            <div class="row">
+                <div id="confirmTicket_CalendarPart" class="col-xs-12">
+                    <div class="text-left" id="confirmTicket_CalendarHeader">Delivery time:</div>
+                    <div id="confirmTicket_Calendar"></div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="text-left" id="confirmTicket_location"></div>
+                    <div id="confirmTicket_Map" class="map"></div>
+                </div>
+            </div>
+
+            <a type="button" class="btn waves-effects orange" id="confirmTicket_button">Confirm</a>
         </div>
     </div>
 </div>
