--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@
                             }
                             if (data.isDriver != loader.isDriver) {
                                 if (data.isDriver) {
-                                    loader.switchToDriver();
+                                    //loader.switchToDriver();
                                     return;
                                 }
                                 else {
-                                    loader.switchToShopper();
+                                    //loader.switchToShopper();
                                     return;
                                 }
                             }
